--- a/src/style.css
+++ b/src/style.css
@@ -92,7 +92,7 @@ header {
   width: 20px;
   height: 20px;
   background-repeat: no-repeat;
-  background-image: url("../img/user.svg");
+  /* background-image: url("/img/user.svg"); */
   background-position: center;
   background-size: cover;
   margin-right: 8px;
@@ -103,7 +103,7 @@ header {
   width: 28px;
   height: 28px;
   background-repeat: no-repeat;
-  background-image: url("../img/korzinka.svg");
+  /* background-image: url("/img/korzinka.svg"); */
   background-position: center;
   background-size: cover;
   margin-left: 32px;
@@ -171,7 +171,7 @@ header {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  background-image: url("../img/hero-img.jpg");
+  /* background-image: url("/img/hero-img.jpg"); */
   width: 100%;
   height: 550px;
   margin-top: 135px;
@@ -491,7 +491,7 @@ footer {
 }
 .ProductsImg{
   width: 80px;
-  
+
 }
 .Product{
   margin-top: 150px;
@@ -515,7 +515,7 @@ footer {
   display: flex;
   align-items: center;
   justify-content: space-between;
- 
+
 }
 .ProductName{
   font-size: 20px;
